[package]
name = "aizumi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client/main.rs"

[[bin]]
name = "tcp_client"
path = "src/bin/tcp_client/main.rs"

[[bin]]
name = "sender"
path = "src/bin/sender/main.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver/main.rs"

[dependencies]
actix-web = "4"
futures = "0.3.30"
openraft = {version = "0.9.0", features = ["serde", "storage-v2"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
bincode = "1.3.3"
