[package]
name = "raft-rs-broker"
version = "0.1.0"
edition = "2021"

[dependencies]
slog = "2.2"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-stdlog = "4"
slog-term = "2.4.0"
protobuf = "2"
raft = "0.7.0"
regex = "1"
bincode = "1.3"
serde = { version = "1.0.114", features = ["derive"] }
nix = { version = "0.27.1", features = ["event", "socket"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
simplelog = "0.12.0"
